--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -26,35 +26,34 @@ body
 	color: $text
 
 // Custom Sass / Remove before use
+.container 
+  width: 100%
+  padding-right: 15px
+  padding-left: 15px
+  margin-right: auto
+  margin-left: auto
 
-.container
-	max-width: 700px
-	padding:
-		right: $gutter/2
-		left: $gutter/2
-	margin:
-		left: auto
-		right: auto
+@media (min-width: 576px) 
+  .container 
+    max-width: 540px
+  
+@media (min-width: 768px) 
+  .container 
+    max-width: 720px
+  
+@media (min-width: 992px) 
+  .container 
+    max-width: 960px
+  
+@media (min-width: 1200px) 
+  .container 
+    max-width: 1140px
 
 .img-responsive
 	display: block
 	max-width: 100%
 	height: auto
 
-.example-grid
-	display: grid
-	grid-gap: $gutter
-	grid-template-columns: 1fr 1fr
-	grid-template-areas: "left right"
-	> div:first-child
-		grid-area: left
-	> div:last-child
-		grid-area: right
-	+media-breakpoint-down(xs)
-		display: block
-		> div
-			padding: $gutter/2 0
-	
 .example-img
 	width: 100%
 
