--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -1,6 +1,5 @@
-@import vars
-@import fonts
-@import libs
+@import "bootstrap/scss/bootstrap-reboot.scss" // Bootstrap Reboot collection
+// @import "normalize.css/normalize.css" // CSS library plug-in example (npm i --save-dev normalize.css)
 
 ::placeholder
 	color: #666
@@ -17,7 +16,7 @@ input, textarea
 		border-color: green
 
 body
-	font-size: 16px
+	font-size: 18px
 	min-width: 320px
 	position: relative
 	line-height: 1.65
@@ -25,8 +24,7 @@ body
 	overflow-x: hidden
 	color: $text
 
-// Custom Sass / Remove before use
-.container 
+.container
   width: 100%
   padding-right: 15px
   padding-left: 15px
@@ -47,15 +45,9 @@ body
   
 @media (min-width: 1200px) 
   .container 
-    max-width: 1140px
+    max-width: 1170px
 
 .img-responsive
 	display: block
 	max-width: 100%
 	height: auto
-
-.example-img
-	width: 100%
-
-.parent // Lazy Load Placeholder Generator: https://webdesign-master.ru/services/lazy/
-	background-image: url(data:image/gif;base64,R0lGODlhCgAIAIABAN3d3f///yH5BAEAAAEALAAAAAAKAAgAAAINjAOnyJv2oJOrVXrzKQA7)
