--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -35,6 +35,10 @@ body
 	overflow-x: hidden
 	color: $text
 
+picture
+	display: block
+	text-align: center
+
 .container
   width: 100%
   padding-right: 15px
