stop animation on resize

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,3 +6,7 @@ picture
 	margin: 0px auto
 	text-align: center
 	display: block
+
+.resize-animation-stopper *
+  animation: none !important
+  transition: none !important
