new texture and change num of bubbles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,5 +8,5 @@ body {
 
 .main {
     // background: url('../img/Back.jpg') no-repeat center center;
-    background-size: cover;
+    // background-size: cover;
 }
