--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -22,7 +22,7 @@
 	
 
 
-@include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2');
-@include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2');
-@include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2');
-@include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2');
+// @include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2');
+// @include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2');
+// @include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2');
+// @include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2');
